--- a/sert.properties
+++ b/sert.properties
@@ -2,12 +2,24 @@
 # SERT Properties File
 ########################################################################
 sert_apex_workspace = sert
+# keep sert_apex_workspace_id blank to auto-allocate ID
+sert_apex_workspace_id = 32049826282261068
 sert_admin_user = sert_admin
+# set sert_app_id to empty value to auto-allocate Application ID
+# eg:
+# sert_app_id =
+#
 sert_app_id = 2100
+# set sert_admin_id to empty value to auto-allocate Application ID
+# eg:
+# sert_admin_id =
 sert_admin_id = 2101
-#sert_aop_url = https://xgbu-ace-aop.sniadprshared1.gbucdsint02iad.oraclevcn.com
-sert_admin_email_address = michael.potter@oracle.com
-sert_email_from = noreply@oracle.com
+# leave sert_aop_url blank to diable AOP
+sert_aop_url =
+# ensure you set a valid admin email address
+sert_admin_email_address = you@domain.org
+# set the default FROM address for generated emails
+sert_email_from = noreply@domain.org
 sert_mode = standalone
 
 # if you leave the tablespace properties BLANK, installer will attempt to identify default tablespaces
