enable GUARDIAN properties

--- a/sert.properties
+++ b/sert.properties
@@ -27,3 +27,24 @@ sert_mode = standalone
 # explicitly define the tablespaces you install into. This only have effect on first install
 sert_data_tablespace =
 sert_temp_tablespace =
+# ======================================================================
+# SERT Guardian Properties
+# ======================================================================
+
+# Conditional context to install guardian
+# Must be set to "runtime" to install guardian or "none"
+# e.g.
+# guardian_switch = none
+guardian_switch = runtime
+
+# Set sert_guardian_app_id to empty value to auto-allocate Application ID
+# e.g.
+# sert_guardian_app_id =
+sert_guardian_app_id = 2102
+
+# Set the Authentication Scheme from the included options:
+#   "Builder Extension Sign-In" - enables you to integrate this application with the APEX development environment.
+#   "SAML Sign-In"              - supports authentication with SAML2 identity providers
+#   "Oracle APEX Accounts"      - internal user accounts that are managed in the Oracle APEX user repository.
+# e.g.
+# guardian_authn_scheme = Builder Extension Sign-In
